force-app/main/default/objects/Opportunity/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>