force-app/main/default/objects/Opportunity/fields/BankRoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>BankRoutingNumber__c</fullName>
    <label>Bank Routing Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>