force-app/main/default/objects/Opportunity/fields/BankSwiftCode__c.field-meta.xml
<CustomField>
    <fullName>BankSwiftCode__c</fullName>
    <label>Bank SWIFT Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>