force-app/main/default/objects/Opportunity/fields/BillingNotes__c.field-meta.xml
<CustomField>
    <fullName>BillingNotes__c</fullName>
    <label>Billing Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>