force-app/main/default/objects/Opportunity/fields/CompanyLogoUrl__c.field-meta.xml
<CustomField>
    <fullName>CompanyLogoUrl__c</fullName>
    <label>Company Logo URL</label>
    <type>Url</type>
</CustomField>